--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FormularioLogin">
+        android:theme="@style/Theme.FormularioLogin"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activities.HomeActivity"
             android:exported="true" />
